[tool.poetry]
name = "sample-flask-auth"
version = "0.1.0"
description = ""
authors = ["leoneville <leoneville_@hotmail.com>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.11"
flask = "2.3.0"
flask-sqlalchemy = "3.1.1"
flask-login = "0.6.2"
werkzeug = "2.3.0"


[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
